--- a/hotel_restoraunt/App.xaml
+++ b/hotel_restoraunt/App.xaml
@@ -1,9 +1,5 @@
 ﻿<Application x:Class="hotel_restoraunt.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:hotel_restoraunt"
-             StartupUri="MainWindow.xaml">
-    <Application.Resources>
-         
-    </Application.Resources>
+             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+    <!-- Усі ресурси, але без StartupUri -->
 </Application>
