--- a/hotel_restoraunt/ViewModels/MainWindow.xaml
+++ b/hotel_restoraunt/ViewModels/MainWindow.xaml
@@ -1,5 +1,5 @@
 ﻿<!-- Views/MainWindow.xaml -->
-<Window x:Class="HotelManager.WPF.Views.MainWindow"
+<Window x:Class="hotel_restoraunt.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
