--- a/hotel_restoraunt/Views/ReservationView.xaml
+++ b/hotel_restoraunt/Views/ReservationView.xaml
@@ -1,12 +1,16 @@
 <Window x:Class="hotel_restoraunt.Views.ReservationView"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Reservation Management" Height="450" Width="800">
-    <Grid>
-        <DataGrid ItemsSource="{Binding Reservations}" AutoGenerateColumns="True" Margin="10"/>
-        
-        <Button Content="Create" HorizontalAlignment="Left" VerticalAlignment="Bottom" Width="100" Height="30" Margin="10" Command="{Binding CreateCommand}"/>
-        <Button Content="Update" HorizontalAlignment="Left" VerticalAlignment="Bottom" Width="100" Height="30" Margin="120,0,0,10" Command="{Binding UpdateCommand}"/>
-        <Button Content="Delete" HorizontalAlignment="Left" VerticalAlignment="Bottom" Width="100" Height="30" Margin="230,0,0,10" Command="{Binding DeleteCommand}"/>
+        Title="Бронювання" Height="400" Width="500">
+    <Grid Margin="10">
+        <StackPanel>
+            <ComboBox ItemsSource="{Binding Guests}" DisplayMemberPath="Name" SelectedItem="{Binding SelectedGuest}" Margin="5" />
+            <ComboBox ItemsSource="{Binding Rooms}" DisplayMemberPath="Number" SelectedItem="{Binding SelectedRoom}" Margin="5" />
+
+            <DatePicker SelectedDate="{Binding CheckInDate}" Margin="5" />
+            <DatePicker SelectedDate="{Binding CheckOutDate}" Margin="5" />
+
+            <Button Content="Забронювати" Command="{Binding AddReservationCommand}" Margin="5" />
+        </StackPanel>
     </Grid>
 </Window>
